--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>SharkDev Portfolio</title>
+  <title>Portfolio</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -11,7 +11,7 @@
   <!-- Header -->
   <header>
     <div class="nav-container">
-      <div class="logo">SharkDev</div>
+      <div class="logo">Spearfisher</div>
       <div class="nav-links">
         <a href="#" class="active">Home</a>
         <a href="#image-gallery">Gallery</a>
@@ -161,3 +161,4 @@
 
 </body>
 </html>
+
